--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,34 @@ body {
     background-color: #e6f3f8;
 }
 
-.about-image {
-    height: 350px;
-    width: 450px;
+
+#scrollBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none; /* Initially hide the button */
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 35px;
+    transition: 0.3s;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  }
+  
+  #scrollBtn:hover {
+    background-color: #fff;
+    color: #007bff;
+    border: 1px solid #007bff;
+  }
+
+.how-it-works-image-2  {
+    height: 380px;
+    width: 600px;
+    border-radius: 20px;
 }
 
 .how-it-works {
@@ -146,8 +171,8 @@ body {
 }
 
 .footer-logo img {
-    height: 80px;
-    width: 80px;
+    height: 70px;
+    width: 70px;
 }
 
 .useful-links ul li {
