--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ body {
     width: 50px;
 }
 
+ .navbar-toggler-icon {
+    background-image: url(/assets/images/menu.svg);
+    height: 30px;
+}
+
 .hero-bg {
     background-color: #e6f3f8;
 }
@@ -31,6 +36,7 @@ body {
     border-radius: 50%;
     cursor: pointer;
     font-size: 35px;
+    z-index: 999;
     transition: 0.3s;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
   }
