--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 
  .navbar-toggler-icon {
     background-image: url(/assets/images/menu.svg);
-    height: 30px;
+    /* height: 30px; */
 }
 
 .hero-bg {
